--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="title2">Sasono Mulyo</div>
                 <div class="title3"><a class="maplink" href="https://goo.gl/maps/7my6JBpZn1KkFFpWA" target="_blank">
                     Jalan Jatimulya, <br/> No 30, <br/>Cilodong,  <br/>
-                    Depok, Jawa Barat<br/><i class="flaticon-map35"></i></a></div>
+                    Depok, Jawa Barat<br/><i class="flaticon-map35"></i><br/>(klik disini)<br/></a></div>
 
                 <div class="pattern2"></div>
                 <div class="title1">pukul 16.30 - 21.00 </div>
@@ -237,7 +237,7 @@
                             Bertemu Kembali
                             <i>2019</i>
                         </div>
-                        Farah melepas status mahasiswa tahun 2019 dan dilanjutkan Dias melamar secara resmi seminggu setelahnya. Tak jauh dari itu Farah diterima bekerja di Jakarta. Dan entah apa yang rencana Alloh, kami berada di satu tempat kajian lagi di Jakarta. Masa itu masa sangat bahagia bagi kami. Orang tua Farah haji, Farah wisuda, dan Dias melamarnya satu minggu setelah wisuda.
+                        Farah melepas status mahasiswa tahun 2019 dan dilanjutkan Dias melamar secara resmi seminggu setelahnya disaksikan keluarga kedua belah pihak. Tak jauh dari itu Farah diterima bekerja di Jakarta. Dan entah apa yang rencana Alloh, kami berada di satu tempat kajian lagi di Jakarta. Masa itu masa sangat bahagia bagi kami. Orang tua Farah haji, Farah wisuda, dan Dias melamarnya.
                     </div>
                 </div>
             </div>
@@ -321,21 +321,21 @@
         <div class="gallery_wrapper">
             <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/difaro.jpg" title="Engagement Photos"><b>Difaro</b>
+                    <a href="img/prewedding.jpg" title="Engagement Photos"><b>Prewedding</b>
                     </a>
                 </div>
-                <img src="img/difaro.jpg" alt="Gallery 1">
+                <img src="img/prewedding.jpg" alt="Gallery 1">
             </div>
             <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/payung.jpg" title="Engagement Photos"><b>Love</b>
+                    <a href="img/payung.jpg" title="Engagement Photos"><b>Prewedding</b>
                     </a>
                 </div>
                 <img src="img/payung.jpg" alt="Gallery 2">
             </div>
             <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/bunga.jpg" title="Engagement Photos"><b>Love</b>
+                    <a href="img/bunga.jpg" title="Engagement Photos"><b>Prewedding</b>
                     </a>
                 </div>
                 <img src="img/bunga.jpg" alt="Gallery 3">
@@ -349,70 +349,77 @@
             </div> -->
             <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/payung2.jpg" title="Engagement Photos"><b>Love</b>
+                    <a href="img/payung2.jpg" title="Engagement Photos"><b>Prewedding</b>
                     </a>
                 </div>
                 <img src="img/payung2.jpg" alt="Gallery 4">
             </div>            
             <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/cincin.jpg" title="Engagement Photos"><b>Love</b>
+                    <a href="img/cincin.jpg" title="Engagement Photos"><b>Prewedding</b>
                     </a>
                 </div>
                 <img src="img/cincin.jpg" alt="Gallery 5">
             </div>
             <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/cincin2.jpg" title="Engagement Photos"><b>Love</b>
+                    <a href="img/cincin2.jpg" title="Engagement Photos"><b>Prewedding</b>
                     </a>
                 </div>
                 <img src="img/cincin2.jpg" alt="Gallery 6">
             </div>
             <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/lompat.jpg" title="Engagement Photos"><b>Love</b>
+                    <a href="img/lompat.jpg" title="Engagement Photos"><b>Prewedding</b>
                     </a>
                 </div>
                 <img src="img/lompat.jpg" alt="Gallery 7">
             </div>
             <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/hadap.jpg" title="Engagement Photos"><b>Love</b>
+                    <a href="img/hadap.jpg" title="Engagement Photos"><b>Prewedding</b>
                     </a>
                 </div>
                 <img src="img/hadap.jpg" alt="Gallery 8">
             </div>
             <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/depan2.jpg" title="Engagement Photos"><b>Love</b>
+                    <a href="img/depan2.jpg" title="Engagement Photos"><b>Prewedding</b>
                     </a>
                 </div>
                 <img src="img/depan2.jpg" alt="Gallery 9">
             </div>
             <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/bunga2.jpg" title="Engagement Photos"><b>Love</b>
+                    <a href="img/bunga2.jpg" title="Engagement Photos"><b>Prewedding</b>
                     </a>
                 </div>
                 <img src="img/bunga2.jpg" alt="Gallery 10">
             </div>
              <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/lamaran1.jpg" title="Engagement Photos"><b>Love</b>
+                    <a href="img/lamaran.jpg" title="Engagement Photos"><b>Lamaran</b>
+                    </a>
+                </div>
+                <img src="img/lamaran.jpg" alt="Gallery 11">
+            </div>
+            <div class="gallery_item">
+                <div class="gallery_txt">
+                    <a href="img/lamaran1.jpg" title="Engagement Photos"><b>Lamaran</b>
                     </a>
                 </div>
                 <img src="img/lamaran1.jpg" alt="Gallery 11">
             </div>
               <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/lamaran2.jpg" title="Engagement Photos"><b>Love</b>
+                    <a href="img/lamaran2.jpg" title="Engagement Photos"><b>Lamaran</b>
                     </a>
                 </div>
                 <img src="img/lamaran2.jpg" alt="Gallery 12">
             </div>
              <div class="gallery_item">
                 <div class="gallery_txt">
-                    <a href="img/lamaran3.jpg" title="Engagement Photos"><b>Love</b>
+                    <a href="img/lamaran3.jpg" title="Engagement Photos"><b>Lamaran</b>
                     </a>
                 </div>
                 <img src="img/lamaran3.jpg" alt="Gallery 13">
