--- a/index.html
+++ b/index.html
@@ -424,6 +424,13 @@
                 </div>
                 <img src="img/lamaran3.jpg" alt="Gallery 13">
             </div>
+             <div class="gallery_item">
+                <div class="gallery_txt">
+                    <a href="img/lamaran4.jpg" title="Engagement Photos"><b>Lamaran</b>
+                    </a>
+                </div>
+                <img src="img/lamaran4.jpg" alt="Gallery 14">
+            </div>
         </div>
     </section>
     <!-- Gallery End -->
