--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <h2>QnA Farah & Dias Story</h2> 
             <div class="videoWrapper">
                <!-- Copy & Pasted from YouTube -->
-              <iframe width="560" height="349" src="https://youtu.be/_wGgM1ysfuo" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="349" src="https://www.youtube.com/embed/_wGgM1ysfuo" frameborder="0" allowfullscreen></iframe>
            </div>
         </div>
   </section>
