--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="title1">Pendopo Ageng</div>
                 <div class="title2">Sasono Mulyo</div>
                 <div class="title3"><a class="maplink" href="https://goo.gl/maps/7my6JBpZn1KkFFpWA" target="_blank">
-                    Jalan Jatimulya, <br/> No 30, <br/>Cilodong,  <br/>
+                    Jalan Raya Kalimulya, <br/> No 30, <br/>Cilodong,  <br/>
                     Depok, Jawa Barat<br/><i class="flaticon-map35"></i><br/>(klik disini)<br/></a></div>
 
                 <div class="pattern2"></div>
