--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <li><a href="#married">Undangan</a></li>
                     <li><a href="#when_where">Kapan &amp; Dimana</a></li>
                     <li><a href="#events">Cerita Kami</a></li>
-                    <li><a href="#rsvp">RSVP</a></li>
+                    <li><a href="#video">Video</a></li>
                     <li><a href="#gallery">Galeri Kami</a></li>
                 </ul>
             </div>
@@ -104,7 +104,7 @@
             <div class="married_txt" data-bottom="opacity:0" data-center="opacity:1">
                 <h2>Kamu Diundang</h2>
                 Pada 29 Februari 2020<br>
-                <b> Farah Nadya &amp; Dias Nurazna Pramukusuma</b><br>
+                <b> Farah Nadya, S.T. &amp; Dias Nurazna Pramukusuma, S.T.</b><br>
                 akan menikah di Sasono Mulyo, Depok<br>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9iorSjA5lbt8KWKJrsv4oEHzg4iCbXW4lzk00j4pxsP6anw/viewform?usp=sf_link" class="btn go">RSVP NOW</a>
 
