--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                 </div>
                 <img src="img/lamaran2.jpg" alt="Gallery 12">
             </div>
-             <div class="gallery_item">
+          <!--   <div class="gallery_item">
                 <div class="gallery_txt">
                     <a href="img/lamaran3.jpg" title="Engagement Photos"><b>Lamaran</b>
                     </a>
@@ -430,7 +430,7 @@
                     </a>
                 </div>
                 <img src="img/lamaran4.jpg" alt="Gallery 14">
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- Gallery End -->
