--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 
                 <div class="pattern2"></div>
                 <div class="title1">pukul 16.30 - 21.00 </div>
+                <div class="title1">(Sesi I 16.30 - 18.00 | Sesi II 19.00 - 21.00) </div>
                 <div class="title5">Sore Hari</div>
                 <div class="title4">ART PERFORMANCE<br>19.00</div>
                 <div class="pattern3"></div>
