--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 Pada 29 Februari 2020<br>
                 <b> Farah Nadya, S.T. &amp; Dias Nurazna Pramukusuma, S.T.</b><br>
                 akan menikah di Sasono Mulyo, Depok<br>
-                <br>
-                <br>Jika Anda bersedia hadir, Silakan klik <b>RSVP</b> di bawah ini <br>
+               
+                <br>Jika Anda bersedia hadir, Silakan klik <b>RSVP</b> di bawah ini
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9iorSjA5lbt8KWKJrsv4oEHzg4iCbXW4lzk00j4pxsP6anw/viewform?usp=sf_link" class="btn go">RSVP NOW</a>
                 
                <!--  <div class="married_coundown"></div> -->
