--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             Pernikahan
                             <i>2020</i>
                         </div>
-                        Alhamdulillah tahun 2020 InsyaAlloh kami melanjutkan ke jenjang pernikahan. Dan ternyata segala perjuangan kami diberikan waktu terbaik oleh Alloh. Cita-cita kita untuk menikah muda dna mandiri bisa terkabulkan.
+                        Alhamdulillah tahun 2020 InsyaAlloh kami melanjutkan ke jenjang pernikahan. Dan ternyata segala perjuangan kami diberikan waktu terbaik oleh Alloh. Cita-cita kita untuk menikah muda dan mandiri bisa terkabulkan.
                     </div>
                 </div>
             </div>
